--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -4,19 +4,19 @@ layout: default
 
 <h1> Arduinos </h1>
 
-<p> Welcome to my arduino-based projects. If you want to read a little bit about arduinos, visit the <a href="http://joeiddon.me/proejects/arduino/about.html">about page</a> that I made on them. Otherwise, click on any of the projects below to see what theyre about... </p>
+<p> Welcome to my arduino-based projects. If you want to read a little bit about arduinos, visit the <a href="http://joeiddon.me/projects/arduino/about">about page</a> that I made on them. Otherwise, click on any of the projects below to see what theyre about... </p>
 
 
 <table>
   <tr>
     <td>
-      <a href="http://joeiddon.me/projects/arduino/sildeRobotArm.html">
+      <a href="http://joeiddon.me/projects/arduino/sildeRobotArm">
       <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
       </a>
     </td>
     
     <td>
-      <a href="http://joeiddon.me/projects/arduino/sildeRobotArm.html">
+      <a href="http://joeiddon.me/projects/arduino/sildeRobotArm">
       <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
       </a>
     </td>
@@ -24,13 +24,13 @@ layout: default
   
   <tr>
     <td>
-      <a href="http://joeiddon.me/projects/arduino/sildeRobotArm.html">
+      <a href="http://joeiddon.me/projects/arduino/sildeRobotArm">
       <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
       </a>
     </td>
     
     <td>
-      <a href="http://joeiddon.me/projects/arduino/sildeRobotArm.html">
+      <a href="http://joeiddon.me/projects/arduino/sildeRobotArm">
       <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
       </a>
     </td>
