--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -6,8 +6,32 @@ layout: default
 
 <p>Below is a collection of my projects coded in javascript. If you want to read a post on what I mainly use javascript for, checkout this <a href="http://joeiddon.me/projects/javascript/about.html">about page</a> I wrote.</p>
 
-
 <table>
-	
-	
+  <tr>
+    <td>
+      <a href="http://joeiddon.me/projects/arduino/slideRobotArm">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      </a>
+    </td>
+    
+    <td>
+      <a href="http://joeiddon.me/projects/arduino/slideRobotArm">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      </a>
+    </td>
+  </tr>
+  
+  <tr>
+    <td>
+      <a href="http://joeiddon.me/projects/arduino/slideRobotArm">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      </a>
+    </td>
+    
+    <td>
+      <a href="http://joeiddon.me/projects/arduino/slideRobotArm">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      </a>
+    </td>
+  </tr>
 </table>
