--- a/projects/javascript/bouncingBall.html
+++ b/projects/javascript/bouncingBall.html
@@ -21,18 +21,19 @@ The basic simulation of a bouncing ball is relatively simple and I did using obj
 </p>
 
 <canvas id="canvas1" width="480" height ="720"></canvas>
-<script>
-canvas1 = document.getElementById("canvas1")
+<script>canvas1 = document.getElementById("canvas1")
 ctx1 = canvas1.getContext("2d")
-ball = {x: 100, y: 100, vx: 2, vy: 1, r: 10}
+ball = {x: 100, y: 100, vx: 4, vy: 1, r: 20}
 setInterval(function(){
+  if (ball.x + ball.vx < 0 + ball.r || ball.x + ball.vx > 720 - ball.r)	ball.vx *= -1
+  if (ball.y + ball.vy < 0 + ball.r || ball.y + ball.vy > 480 - ball.r)	ball.vy *= -1
+  ball.x += ball.vx
+  ball.y += ball.vy
+  ctx1.clearRect(0,0,720,480)
   ctx1.beginPath()
   ctx1.arc(ball.x, ball.y, ball.r, 0, 2 * Math.PI)
   ctx1.stroke()
-  ctx1.fillStyle="#000000"
+  ctx1.fillStyle="#1d7"
   ctx1.fill()
-  ball.x += ball.vx
-  ball.y += ball.vy
 }, 10)
-
 </script>
