--- a/projects/javascript/bouncingBall.html
+++ b/projects/javascript/bouncingBall.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<h1>Bouncing Balls<h1>
+<h1>Bouncing Balls</h1>
 
-<a href="http://joeiddon.me/UltiBouncingBall/BallHtml.html">run the simulation here</a>
+<h2><a href="http://joeiddon.me/UltiBouncingBall/BallHtml.html">run the simulation here</a></h2>
 
 <p>
 This simulation was one of the first things I coded in JS. Yes it has obviously been done before, but I wanted try and create an accurate, realistic and clean solution to demonstrate the physics of how balls react in a system with some paramaters to play with.
