--- a/projects/javascript/bouncingBall.html
+++ b/projects/javascript/bouncingBall.html
@@ -42,3 +42,21 @@ setInterval(function(){
   ctx1.fill()
 }, 10)
 </script>
+
+<pre>
+canvas1 = document.getElementById("canvas1")
+ctx1 = canvas1.getContext("2d")
+ball = {x: 100, y: 100, vx: 4, vy: 1, r: 20}
+setInterval(function(){
+  if (ball.x + ball.vx < 0 + ball.r || ball.x + ball.vx > 720 - ball.r)	ball.vx *= -1
+  if (ball.y + ball.vy < 0 + ball.r || ball.y + ball.vy > 480 - ball.r)	ball.vy *= -1
+  ball.x += ball.vx
+  ball.y += ball.vy
+  ctx1.clearRect(0,0,720,480)
+  ctx1.beginPath()
+  ctx1.arc(ball.x, ball.y, ball.r, 0, 2 * Math.PI)
+  ctx1.stroke()
+  ctx1.fillStyle="#1d7"
+  ctx1.fill()
+}, 10)
+</pre>
