--- a/projects/javascript/bouncingBall.html
+++ b/projects/javascript/bouncingBall.html
@@ -24,7 +24,7 @@ The basic simulation of a bouncing ball is relatively simple and I did using obj
 	<li> use javascript's <a href="https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/setInterval">set interval</a> to repeat the last 3 steps every couple ms
 </ol>
 
-<canvas id="canvas1" width="500" height ="300" style="border:3px solid"></canvas>
+<canvas id="canvas1" width="500" height ="300"></canvas>
 <script>
 canvas1 = document.getElementById("canvas1")
 ctx1 = canvas1.getContext("2d")
