--- a/projects/arduino/mg996rRobotArm.html
+++ b/projects/arduino/mg996rRobotArm.html
@@ -9,7 +9,7 @@ If you haven't seen my first arduino robot arm, then please checkout that projec
 </p>
   
 <p> 
-After finnishing it, I realised that the project had potential but to do anything more substantial/ useful, I needed to spend more time on its design and use different motors. I researched in-depth the different ways robot arms could be configured involving things like their degress of freedom, max torque and there working area. If you are interested, checkout <a href="http://www.societyofrobots.com/robot_arm_tutorial.shtml>this introduction</a>. Anyway, I settled on bulding an articulated robot arm which allowed for the most versatility and degrees of freedom.
+After finnishing it, I realised that the project had potential but to do anything more substantial/ useful, I needed to spend more time on its design and use different motors. I researched in-depth the different ways robot arms could be configured involving things like their degress of freedom, max torque and there working area. If you are interested, checkout <a href="http://www.societyofrobots.com/robot_arm_tutorial.shtml">this introduction</a>. Anyway, I settled on bulding an articulated robot arm which allowed for the most versatility and degrees of freedom.
 </p>
 <p>
 To see what a small industrial articulated robot arm can do and their level of precision, checkout this:
