--- a/projects/arduino/mg996rRobotArm.html
+++ b/projects/arduino/mg996rRobotArm.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>My second attempt at building a robot arm... <h2>
+<h1>My second attempt at building a robot arm... </h1>
 
 <p>
 If you haven't seen my first arduino robot arm, then please checkout that project <a "href="http://joeiddon.me/projects/arduino/slideRobotArm">here</a>. The idea of that project was a test of what was possible using servos and an arduino. I wanted to see if I could build a strong, accurate and repeatable robot arm and I think I succeeded in doing so shown by that video. However, I spent no time planning or thinking through the design, I was just foccused on the one goal of picking and dropping stuff down a slide. This led to me building the frame out of some weak wood and having a bad bottom axel where the whole weight of the arm was resting on the flimsy plastic servo at the bottom.
