--- a/projects/arduino/mg996rRobotArm.html
+++ b/projects/arduino/mg996rRobotArm.html
@@ -18,5 +18,13 @@ To see what a small industrial articulated robot arm can do and their level of p
 <iframe width="1280" height="720" src="https://youtube.com/embed/Gx5be7_J2xc?start=68&mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
   
 <p>
-Anyway, after wasting some time watching these things on youtube, I realised that one of the key design points was the motors used. As before, I had decided to use servos but the small TowerPro mg90s weren't going to cut it as they have plastic gears and hardly any torque. So I came across this website called <a href="https://servodatabase.com/">the servo database</a> where you can sort a huge variety of servos based on torque, weight etc. Eventually, a decided that I would use the mg996r servos. they have 9.6kg/cm torque and are metal geared so they would be perfect for my application. So knowing that they would take a while to arrive, I ordered 4 for £13 off ebay. In the meantime, I began the design of the arm...
+Anyway, after wasting some time watching these things on youtube, I realised that one of the key design points was the motors used. As before, I had decided to use servos but the small TowerPro mg90s weren't going to cut it as they have plastic gears and hardly any torque. So I came across this website called <a href="https://servodatabase.com/">the servo database</a> where you can sort a huge variety of servos based on torque, weight etc. Eventually, I decided that I would use the mg996r servos. They have 9.6kg/cm torque and are metal geared so they would be perfect for my application. So knowing that they would take a while to arrive, I ordered 4 for £13 off ebay. In the meantime, I began the design of the arm...
 </p>
+
+<p>
+As this was going to be a bigger project than my last robot arm, I needed the design of the arm to be much stronger and stable so I decided to 3D print it. I am not going to go into the stages of design here, but you can find the finished model files and view them <a href="https://www.thingiverse.com/thing:2459472">here</a>. 
+</p>
+
+  
+
+  
