--- a/projects/arduino/mg996rRobotArm.html
+++ b/projects/arduino/mg996rRobotArm.html
@@ -25,6 +25,8 @@ Anyway, after wasting some time watching these things on youtube, I realised tha
 As this was going to be a bigger project than my last robot arm, I needed the design of the arm to be much stronger and stable so I decided to 3D print it. I am not going to go into the stages of design here, but you can find the finished model files and view them <a href="https://www.thingiverse.com/thing:2459472">here</a>. 
 </p>
 
-  
+<p>
+When I have the time, I will write some posts on openSCAD and 3D printing in general, but I thought it might be interesting just to put in a screenshot of the most intricate part of the design - the gripper. This took many revisions to get right but works really well.
+</p>
 
-  
+<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/gripperOpenSCAD.JPG"></img>
