--- a/projects/arduino/mg996rRobotArm.html
+++ b/projects/arduino/mg996rRobotArm.html
@@ -35,9 +35,9 @@ When I have the time, I will write some posts on openSCAD and 3D printing in gen
 Finally, once I had finished the design of the frame, I printed them out and put the thing together with the servos. Here it is:
 </p>
 
-<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArm.jpg></img>
-<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArmNano.jpg></img>
-<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/powerSupply.jpg></img>
+<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArm.jpg"></img>
+<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArmNano.jpg"></img>
+<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/powerSupply.jpg>"</img>
 
 <p>
 The actual design is now obvious and I was pleased with how it came out. I then soldered together a mini circuit board which just had some headers for the servo leads and for the arduino nano I used to program it. I had to setup the servos power to come from an external 7v power suppply (bottom) because they drew a lot of current which the arduino wouln't have been able to handle.
