--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -24,8 +24,8 @@ layout: default
   
   <tr>
     <td>
-      <a href="http://joeiddon.me/projects/arduino/slideRobotArm">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      <a href="http://joeiddon.me/projects/arduino/mg996rRobotArm">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArm.jpg"></img>
       </a>
     </td>
     
