--- a/projects/javascript/gravity.html
+++ b/projects/javascript/gravity.html
@@ -11,7 +11,7 @@ This second simulation shares some aspects to my first <a href="http://joeiddon.
 </p>
 
 <p>
-The equation for gravity (taken from <a href="https://en.wikipedia.org/wiki/Gravity">this wikipedia page on gravity) is:
+The equation for gravity (taken from <a href="https://en.wikipedia.org/wiki/Gravity">this wikipedia page on gravity)</a> is:
 </p>
 
 <img src="https://en.wikipedia.org/wiki/Gravity"></img>
