style and img src changed

--- a/projects/javascript/gravity.html
+++ b/projects/javascript/gravity.html
@@ -14,7 +14,7 @@ This second simulation shares some aspects to my first <a href="http://joeiddon.
 The equation for gravity (taken from <a href="https://en.wikipedia.org/wiki/Gravity">this wikipedia page on gravity)</a> is:
 </p>
 
-<img src="https://en.wikipedia.org/wiki/Gravity"></img>
+<img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/8c6ee5510ba3c7d6664775c0e76b53e72468303a"></img>
 
 <p>
 Where F is the force, m1 and m2 are the masses of the objects interactng, r is the distance between the centers of the masses and G is the gravitational constant.
