--- a/projects/javascript/gravity.html
+++ b/projects/javascript/gravity.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>A Simulating of Gravity</h1>
 
-<h2><a href="http://joeiddon.me/">run the simulation here parameters can be adjusted in the URL</a></h2>
+<h2><a href="http://joeiddon.me/UltiGravity/?100000,4,1,20,1,0,1,//G_Constant_(stength_of_gravity),no_of_balls,min_radius,max_radius,starting_velocity,merge_on_collision,tracing">run the simulation here parameters can be adjusted in the URL</a></h2>
 
 <p>
 This second simulation shares some aspects to my first <a href="http://joeiddon.me/projects/javascript/bouncingBall">bouncing ball</a> but instead of the focus on being the collision between balls in space, this simulation focuses on how balls with different masses interact through gravity.
