post on chess ai

--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -48,5 +48,19 @@ layout: default
       </a>
     </td>
   </tr>
+  
+  <tr>
+    <td>
+      <a href="http://joeiddon.me/projects/javascript/chess">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/chessPreview.JPG"></img>
+      </a>
+    </td>
+    
+    <td>
+      <a href="http://joeiddon.me/projects/javascript/3dMazeGame">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/mazeGamePreview.JPG"></img>
+      </a>
+    </td>
+  </tr>
 
 </table>
