--- a/projects/javascript/sierpinski.html
+++ b/projects/javascript/sierpinski.html
@@ -14,10 +14,12 @@ layout: default
 A special property of the Sierpinski curve is that it fills two-dimensional space. If each curve in the sequence below is drawn to half the scale of its predecessor, then every point in the region of the curve will be found arbitarily close to some members of the sequence. In other words, the sequence of curves comes closer and closer to every single point in the region. The limiting curve actually covers them all.
 </p>
 
-<img src="http://"></img>
+<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/sierpinski1.JPG"></img>
+<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/sierpinski2.JPG"></img>
+<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/sierpinski3.JPG"></img>
 
 <p>
-The generation of these curves can be done really succinclty with recursion. Two functions are required to do this which call each other. Assuming the functions "bendRight" and "bendLeft" are already defined (you can have play with how these work with this interactive demonstration <a href="http://joeiddon.me/SierpinskiCurve/keyboard">here</a>) as functions to move the current path of the curve round to the right or left respectively, these are the two functions:
+The generation of these curves can be done really succinctly with recursion. Two functions are required to do this which call each other. Assuming the functions "bendRight" and "bendLeft" are already defined (you can have play with how these work with this interactive demonstration <a href="http://joeiddon.me/SierpinskiCurve/keyboard">here</a>) as functions to move the current path of the curve round to the right or left respectively, these are the two functions:
 </p>
 
 <pre>
