sierepinski imgs resized

--- a/projects/javascript/sierpinski.html
+++ b/projects/javascript/sierpinski.html
@@ -14,6 +14,12 @@ layout: default
 A special property of the Sierpinski curve is that it fills two-dimensional space. If each curve in the sequence below is drawn to half the scale of its predecessor, then every point in the region of the curve will be found arbitarily close to some members of the sequence. In other words, the sequence of curves comes closer and closer to every single point in the region. The limiting curve actually covers them all.
 </p>
 
+<style>
+img {
+	width: 300px;
+}
+</style>
+
 <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/sierpinski1.JPG"></img>
 <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/sierpinski2.JPG"></img>
 <img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/sierpinski3.JPG"></img>
