style update mistake

--- a/projects/javascript/bouncingBall.html
+++ b/projects/javascript/bouncingBall.html
@@ -43,7 +43,7 @@ function update(){
 setInterval(update, 10);										//set interval for function update every 10ms
 </pre>
 
-<canvas id="canvas1" width="500" height ="300"></canvas>
+<canvas id="canvas1" width="500" height="300" style="border: 0;margin: 0;background-color: black;"></canvas>
 <script>
 canvas1 = document.getElementById("canvas1")
 ctx1 = canvas1.getContext("2d")
