--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Hello and welcome to my site, here I will be posting my projects and stuf to fin
 </p>
 
 <p>
-here is a picture of my cat:
+I don't know what to put on the front page, so here is a picture of my cat:
 </p>
 
 <img id="wispa_img" src="https://lh3.googleusercontent.com/flzpdNHcXnFBGai8vGsB_Ecj_OsF5WC_ROFkTP-IX7tZQxpwB33_6wvFWyYh_JzVeqIOmpTFs7KSfO8DcFriKmQCLPdVJPKnt9iidEE8RLQTtI6bkhru-RaKriCk4BEDuPgNKobwuq_bPTPn60FAh5ZbVI6viqtrBAnRrF9l3dfOhHKjDeZWWea6rhwM1WPhu1piJ5D_Oz2chsGZZdKzxzhcaUyLYL5F4Iac40pXmizoPDywwds4_NAZOtTDFhYg3voyeIcf70v-BHCcZ5BEAiKiP6sAdgMqSZQymT0oH4fp5Mv29pommnv3SYo11ePo0YuVM7uG-dJYBp_sElfE_u1RCRbqA55x5z79DtuMyasPfOLzM6DLmGBGYteYT4kzAZ0hPpxPlE_daAYbhFMIthrf-bycgd64WkkT4i4D7OrMRQw1R9UrZW-ACbYe2gZOLkQ2vONIor6rtlXc_4zucBDZaR6P0vtDi62-jXxd1Qysjof9dNJMcxJg3aRCeY1p_Yuky-posEgpuYERacnOma8CIW55mm8OQ6fS48zvW1qC2BdX1nPabz1lyp14wI34WPonYm4Rx4uRT3bprU3-cHxuOXMbc-gTvffHvJmXnN4B0s3DsLpO143J5kvSmwN5MZoBJiE4tee_SYt5X2GqLK9L3WJWF6MtRcWGjjasQ_OGZi8=w1359-h1019-no"></img>
