fixed styling stuff and updated maze img

--- a/projects/javascript/mazeGeneration.html
+++ b/projects/javascript/mazeGeneration.html
@@ -12,6 +12,13 @@ canvas {
 	display: block;
 	margin: auto;
 }
+table {
+	border-collapse: collapse;
+}
+td {
+	border: 1px solid black;
+	padding: 8px;
+}
 </style>
 
 <h1>Maze Generation Algorithms</h1>
