created project css

--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<link rel="stylesheet" href="http://joeiddon.me/projects/project.css">
+
 <h1> Arduinos </h1>
 
 <p> Welcome to my arduino-based projects. If you want to read a little bit about arduinos, visit the <a href="http://joeiddon.me/projects/arduino/about">about page</a> that I made on them. Otherwise, click on any of the projects below to see what theyre about... </p>
